components/navidrome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome-service
  namespace: glasgow-prod
spec:
  selector:
    app: navidrome
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4533
  type: ClusterIP
